[metadata]
name = bluescan
version = attr: bluescan.VERSION
author = Sourcell Xu
author_email = sourcell.xu@outlook.com
description = A Bluetooth scanner for hacking
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/fO-000/bluescan
classifiers =
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: System :: Networking
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Wireless Controller
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    =src
packages = find:
python_requires = ==3.10.*
install_requires =
    docopt >= 0.6.2
    bluepy >= 1.3.0
    halo >= 0.0.31
    pyserial >= 3.5
    PyGObject >= 3.42.2
    dbus-python >= 1.3.2
    xpycommon >= 0.0.14
    bthci >= 0.0.36
    btsm >= 0.0.13
    btatt >= 0.0.16
    btgatt >= 0.0.19

# specified via MANIFEST.in
include_package_data = True

[options.packages.find]
where = src
include = bluescan, bluescan.service_record

[options.entry_points]
console_scripts =
    bluescan = bluescan.__main__:main
