[metadata]
name = bluing
version = attr: bluing.VERSION
author = Sourcell Xu
author_email = sourcell.xu@outlook.com
description = An intelligence gathering tool for hacking Bluetooth
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
url = https://github.com/fO-000/bluing
classifiers =
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: System :: Networking
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Wireless Controller
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)


[options]
python_requires = ==3.10.*
install_requires =
    docopt >= 0.6.2
    bluepy >= 1.3.0
    halo >= 0.0.31
    pyserial >= 3.5
    PyGObject >= 3.42.2
    dbus-python >= 1.3.2
    xpycommon >= 0.0.23
    bthci >= 0.0.41
    btsm >= 0.0.16
    btatt >= 0.0.19
    btgatt >= 0.0.22

package_dir =
    =src
packages =
    bluing
    bluing.android
    bluing.br
    bluing.le
    bluing.le.res
    bluing.plugin
    bluing.plugin.list
    bluing.plugin.install
    bluing.plugin.uninstall
    bluing.plugin.run
    bluing.res
    bluing.service_record

# Package data is specified via MANIFEST.in
include_package_data = True


[options.entry_points]
console_scripts =
    bluing = bluing.__main__:main
